EC2SecurityGroups.tf

# Create EC2 Security Groups Terraform Module
/* module "ec2sg" {
  source  = "terraform-aws-modules/ec2securitygroup/aws"
  version = "2.78.0"
} */

resource "aws_security_group" "example" {
  name_prefix = "example-sg"
  description = "Example security group"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
